--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+Stressed-Cat/Assets/Prefabs/Checkpoints.meta
+Stressed-Cat/Assets/Donuts.meta
+Stressed-Cat/Assets/Donuts.meta
+Stressed-Cat/Assets/Prefabs/Checkpoints.meta
